# Magnetic-Material-Discovery

./: .gitignore  CITATION.cff  LICENSE  README.md  dataset.py  model.py  pyproject.toml  screen.py  train.py
scripts/cluster/: qe_clone_restart_state.sh  qe_fetch_fe6co2ge_uspp.sh  qe_prepare_force_theorem_state.sh  qe_pw.slurm  screen_gnome_masked.slurm  train_masked_multitask_mp.slurm
tests/: test_classification_metrics.py  test_dataset_pipeline.py  test_graph.py  test_model.py  test_screen.py  test_train.py  test_visualization.py
validation/: DFT_validation_summary.md
validation/fe2co_qe/: fe2co_gnome.cif  scf_fim.in  scf_fm.in  scf_nm.in
validation/fe6co2ge_mae_qe/: Fe6Co2Ge_result_summary_2026-03-27.md  continue_001.in  continue_100.in  ft_nscf_001.in  ft_nscf_001_long.in  ft_nscf_001_restart.in  ft_nscf_100.in  ft_scf_fm.in  mae_001.in  mae_100.in  rescue_100.in  restart16_100.in  resume_001.in  resume_100.in  run_001.in  run_100.in  smoke_001.in  smoke_001_soft.in  smoke_100.in  stage_ref_001_continue.in  stage_ref_001_seed.in  stage_x_030_continue.in  stage_x_060_continue.in  stage_x_090_continue.in
validation/fe6co2ge_qe/: scf_fim.in  scf_fm.in  scf_nm.in
validation/qe_smoke/: fe2co_fim_2p.out  fe2co_fm_2p.out  fe2co_nm_2p.out  fe6co2ge_fim_2p.out  fe6co2ge_fm_2p.out  fe6co2ge_nm_2p.out  scf_c_diamond.in  scf_fe2co_fim_debug.in  scf_fe2co_fm_debug.in  scf_fe2co_nm_debug.in  scf_fe6co2ge_fim_debug.in  scf_fe6co2ge_fm_debug.in  scf_fe6co2ge_nm_debug.in  scf_vfe15_fim_debug.in  scf_vfe15_fm_debug.in  scf_vfe15_nm_debug.in  vfe15_fim_2p.out  (+2 more)
(+3 files in other folders)
